--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,13 @@
   <title>NathanShopAdmin</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+
+  <link rel="icon" type="image/x-icon" href="assets/images/nathanLogos/transparent.png">
+  <link rel="apple-touch-icon" href=assets/images/nathanLogos/transparent.png"> <link rel="shortcut icon"
+    type="image/x-icon" href="assets/images/nathanLogos/transparent.png">
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i%7CQuicksand:300,400,500,700"
     rel="stylesheet">
